# tide-web-demo

./: Cargo.toml  README.md  Settings.toml  build.rs  log4rs.yml  rustfmt.toml
src/: app.rs  constants.rs  main.rs
src/Settings/: dev.toml
src/controllers/: article.rs  hello.rs  mod.rs
src/middlewares/: http_log.rs  mod.rs
src/models/: article.rs  hello.rs  mod.rs  weather.rs
src/routers/: article.rs  hello.rs  mod.rs
src/services/: article.rs  grpc_services.rs  hello.rs  mod.rs
tests/: health.rs  hello.rs
