[package]
name = "tide-web"
version = "0.1.0"
authors = ["ttang <d_ttang@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tide_web"
path = "src/main.rs"

[dependencies]
# tide = "0.11.0"
# mongodb = {  }
redis = { version = "0.16.0", features = ["async-std-comp"]}
async-std = { version = "1.6.1", features = ["attributes"]}
log4rs = {version = "0.12.0", features = ["json_encoder"] }
log = "0.4.8"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = "1.0.111"
http-types = "2.2.0"
lazy_static = "1.4.0"
config = "0.10.1"
smol = { version = "0.1.18", features = ["tokio02"] }
tokio = "0.2.21"

[dependencies.mongodb]
version =  "1.0.0"
default-features = false
features = ["async-std-runtime"]
path = "/Users/ttang/TheCode/rust/mongo-rust-driver"

[dependencies.tide]
version = "0.11.0"
path = "/Users/ttang/TheCode/rust/tide"

[dev-dependencies]
mocktopus = "0.7.5"
